fix load flicker on page reload
was sampling button color but button color was animated. restricted animation to flex-grow on top button

--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@
     font-weight: 400;
     font-size: 0.9rem;
     /*animate*/
-    transition: ease 0.1s;
+    transition: flex-grow ease 0.1s;
 }
 
 .top-nav_btn_selected {
